fixing tiny spacing issue for mobile

--- a/moandme/src/LandingPage/LandingPage.scss
+++ b/moandme/src/LandingPage/LandingPage.scss
@@ -151,6 +151,7 @@ a {
         }
         @media #{$tablet-small} {
           font-size: 4rem;
+          margin-left: 10px;
         }
       }
       h2 {
